# blackbird

./: .gitignore  LICENSE  README.md
js/: index.html  index.js  package-lock.json  package.json  style.css
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: k_point.rs  uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: rank_selection.rs  roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  lib.rs
