[package]
name = "blackbird-simulation-wasm"
version = "0.1.0"
authors = ["Roberto Gabriel Brito <ragabrielbrito@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
blackbird-simulation = { path = "../simulation" }
getrandom = { version = "0.2", features = ["js"] }
